--- a/css/style.css
+++ b/css/style.css
@@ -18,87 +18,144 @@ body {
 .container {
   max-width: 1770px;
   margin: 0 auto;
+  margin-bottom: 40px;
 }
 
 .row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  background-color: rgb(5, 93, 255);
   height: 50px;
+}
+
+.row div {
+  background-color: rgb(5, 93, 255);
+  text-align: center;
 }
 
 [class*=col-] {
   border: 1px solid white;
-  height: 50px;
+  line-height: 50px;
+  flex: 0 0 auto;
 }
 
-.col-1 {
+.col-xs-1 {
   flex-basis: calc((100% / 12) * 1);
   max-width: calc((100% /12 ) * 1);
 }
 
-.col-2 {
+.col-xs-2 {
   flex-basis: calc((100% / 12) * 2);
   max-width: calc((100% /12 ) * 2);
 }
 
-.col-3 {
+.col-xs-3 {
   flex-basis: calc((100% / 12) * 3);
   max-width: calc((100% /12 ) * 3);
 }
 
-.col-4 {
+.col-xs-4 {
   flex-basis: calc((100% / 12) * 4);
   max-width: calc((100% /12 ) * 4);
 }
 
-.col-5 {
+.col-xs-5 {
   flex-basis: calc((100% / 12) * 5);
   max-width: calc((100% /12 ) * 5);
 }
 
-.col-6 {
+.col-xs-6 {
   flex-basis: calc((100% / 12) * 6);
   max-width: calc((100% /12 ) * 6);
 }
 
-.col-7 {
+.col-xs-7 {
   flex-basis: calc((100% / 12) * 7);
   max-width: calc((100% /12 ) * 7);
 }
 
-.col-8 {
+.col-xs-8 {
   flex-basis: calc((100% / 12) * 8);
   max-width: calc((100% /12 ) * 8);
 }
 
-.col-9 {
+.col-xs-9 {
   flex-basis: calc((100% / 12) * 9);
   max-width: calc((100% /12 ) * 9);
 }
 
-.col-10 {
+.col-xs-10 {
   flex-basis: calc((100% / 12) * 10);
   max-width: calc((100% /12 ) * 10);
 }
 
-.col-11 {
+.col-xs-11 {
   flex-basis: calc((100% / 12) * 11);
   max-width: calc((100% /12 ) * 11);
 }
 
-.col-12 {
+.col-xs-12 {
   flex-basis: calc((100% / 12) * 12);
   max-width: calc((100% /12 ) * 12);
 }
 
-.row .col-6 .col-1, .col-4 {
-  background-color: rgb(0, 255, 0);
-  height: 30px;
-} 
 
-.col-6>.col-6 {
-  background-color: rgb(0, 255, 0);
-  height: 30px;
+.col-xs-offset-1 {
+  margin-left: calc((100% / 12) * 1);
+}
+
+.col-xs-offset-2 {
+  margin-left: calc((100% / 12) * 2);
+}
+
+.col-xs-offset-3 {
+  margin-left: calc((100% / 12) * 3);
+}
+
+.col-xs-offset-4 {
+  margin-left: calc((100% / 12) * 4);
+}
+
+.col-xs-offset-5 {
+  margin-left: calc((100% / 12) * 5);
+}
+
+.col-xs-offset-6 {
+  margin-left: calc((100% / 12) * 6);
+}
+
+.col-xs-offset-7 {
+  margin-left: calc((100% / 12) * 7);
+}
+
+.col-xs-offset-8 {
+  margin-left: calc((100% / 12) * 8);
+}
+
+.col-xs-offset-9 {
+  margin-left: calc((100% / 12) * 9);
+}
+
+.col-xs-offset-10 {
+  margin-left: calc((100% / 12) * 10);
+}
+
+.col-xs-offset-11 {
+  margin-left: calc((100% / 12) * 11);
+}
+
+.col-xs-offset-12 {
+  margin-left: calc((100% / 12) * 12);
+}
+
+.text {
+  line-height: 50px;
+}
+
+.row.nested div  { 
+  background-color: rgb(0, 255, 0); 
+}
+
+.row.nested {
+  margin: 10px;
 }
